# c4we

./: .gitignore  CMakeLists.txt  README.md
python/: c4we_fn.py  ctypes_loader.py  inversion.py
src/: CMakeLists.txt  inversion.cc  problem.cc  problem.hpp  pybind.cc  statistics.cc  statistics.hpp
